added debug helper

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"scripts": {
+	    "debug":"npm run test && start http://localhost:23654/",
 		"distribute": "distribute -b -i ./src/com.robertocpaes.pterodactyl.sdPlugin/ -o ./dist/",
-		"redistribute": "del-cli ./dist/com.robertocpaes.pterodactyl.streamDeckPlugin && npm run-script distribute"
+		"redistribute": "del-cli ./dist/com.robertocpaes.pterodactyl.streamDeckPlugin && npm run-script distribute",
+		"test":"node debug_helper.js"
 	}
 }
